--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,48 @@
-Package         Version
---------------- -----------
-contourpy       1.3.1
-cycler          0.12.1
-fonttools       4.56.0
-jax             0.5.1
-jaxlib          0.5.1
-kiwisolver      1.4.8
-matplotlib      3.10.1
-ml-dtypes       0.5.1
-numpy           2.2.3
-opt-einsum      3.4.0
-packaging       24.2
-pandas          2.2.3
-pillow          11.1.0
-pyparsing       3.2.1
-python-dateutil 2.9.0.post0
-pytz            2025.1
-scipy           1.15.2
-seaborn         0.13.2
-six             1.17.0
-tzdata          2025.1
+Package                 Version
+----------------------- -----------
+asttokens               3.0.0
+colorama                0.4.6
+comm                    0.2.2
+contourpy               1.3.1
+cycler                  0.12.1
+debugpy                 1.8.12
+decorator               5.2.1
+executing               2.2.0
+fonttools               4.56.0
+ipykernel               6.29.5
+ipython                 9.0.0
+ipython-pygments-lexers 1.1.1
+jax                     0.5.1
+jaxlib                  0.5.1
+jedi                    0.19.2
+jupyter-client          8.6.3
+jupyter-core            5.7.2
+kiwisolver              1.4.8
+matplotlib              3.10.1
+matplotlib-inline       0.1.7
+ml-dtypes               0.5.1
+nest-asyncio            1.6.0
+numpy                   2.2.3
+opt-einsum              3.4.0
+packaging               24.2
+pandas                  2.2.3
+parso                   0.8.4
+pillow                  11.1.0
+platformdirs            4.3.6
+prompt-toolkit          3.0.50
+psutil                  7.0.0
+pure-eval               0.2.3
+pygments                2.19.1
+pyparsing               3.2.1
+python-dateutil         2.9.0.post0
+pytz                    2025.1
+pywin32                 308
+pyzmq                   26.2.1
+scipy                   1.15.2
+seaborn                 0.13.2
+six                     1.17.0
+stack-data              0.6.3
+tornado                 6.4.2
+traitlets               5.14.3
+tzdata                  2025.1
+wcwidth                 0.2.13
